# blogger_agent

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
knowledge/: user_preference.txt
src/blogger_agent/: crew.py  main.py
src/blogger_agent/config/: agents.yaml  tasks.yaml
