[project]
name = "blogger_agent"
version = "0.1.0"
description = "blogger_agent for learnaiwithus.codes"
authors = [{ name = "Sudeep S Patil", email = "sudeepspdeveloper@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
blogger_agent = "blogger_agent.main:run"
run_crew = "blogger_agent.main:run"
train = "blogger_agent.main:train"
replay = "blogger_agent.main:replay"
test = "blogger_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
